--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tsc && jest"
+    "test": "tsc && jest",
+    "docs": "typedoc --out docs ./src --plugin typedoc-plugin-markdown "
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,8 @@
     "@types/node": "^12.7.5",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
+    "typedoc": "^0.15.0",
+    "typedoc-plugin-markdown": "^2.2.4",
     "typescript": "^3.6.3"
   }
 }
