--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
   "name": "rcon.js",
-  "version": "1.0.0",
-  "description": "",
-  "main": "lib/src/index.js",
+  "version": "2.0.0",
+  "type": "module",
+  "description": "An RCON client for NodeJS developers.",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "tsc && jest",
-    "compile": "tsc",
-    "docs": "typedoc --out docs ./src --plugin typedoc-plugin-markdown",
-    "prepublish": "npm run compile && npm run docs"
+    "test": "jest",
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["rcon"],
+  "author": "Dylan Hackworth <dylhack@tutanota.com>",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.2",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.3.1",
     "typedoc": "^0.15.0",
     "typedoc-plugin-markdown": "^2.2.4",
-    "typescript": "^3.6.3"
-  }
+    "typescript": "^4.4.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dylhack/rcon.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dylhack/rcon.js/issues"
+  },
+  "homepage": "https://github.com/dylhack/rcon.js#readme",
+  "dependencies": {}
 }
